@@ -1,4 +1,5 @@
 class Sample_Method
 {
         string SayHello( [IN] string Name, [OUT] string Message);
+        string CheckArrayNoType( [IN] uint32 IntArray[], [OUT] string Message); 
 };
